UI Custom Notificaion (temp)

--- a/TheWeather/app/src/main/res/layout/customnotification.xml
+++ b/TheWeather/app/src/main/res/layout/customnotification.xml
@@ -5,6 +5,7 @@
 
     <ImageView
         android:id="@+id/imgTemp"
+        android:layout_margin="10dp"
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
@@ -15,6 +16,7 @@
 
         <TextView
             android:id="@+id/tvMainTemp"
+            android:layout_marginTop="10dp"
             android:text="Main Temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
