--- a/TheWeather/app/src/main/res/layout/customnotification.xml
+++ b/TheWeather/app/src/main/res/layout/customnotification.xml
@@ -11,11 +11,11 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvMainTemp"
+            android:id="@+id/tvDescriptionTemp"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -28,4 +28,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/tvMainTemp"
+        android:layout_marginLeft="10dp"
+        android:textSize="50sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
