--- a/TheWeather/app/src/main/res/layout/customnotification.xml
+++ b/TheWeather/app/src/main/res/layout/customnotification.xml
@@ -5,7 +5,10 @@
 
     <ImageView
         android:id="@+id/imgTemp"
-        android:layout_margin="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="25dp"
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
