--- a/TheWeather/app/src/main/res/layout/activity_main.xml
+++ b/TheWeather/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="techkids.mad3.theweather.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <ImageView
+        android:id="@+id/imgDetail"
+        android:background="@drawable/trungnt"
+        android:layout_width="500dp"
+        android:layout_height="300dp">
+
+    </ImageView>
 </RelativeLayout>
